Do glFinish before sending snapshot latency info to browser

On some GPU bots the swap was completing long before the contents got on
screen, so PrintWindow didn't get the correct window contents and some
tests were flaky. Triggering a glFinish before sending the latency info
for a snapshot request to the browser should be enough to ensure DWM
executes the Present before the snapshot is executed.

BUG=670098
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2888993002
Cr-Commit-Position: refs/heads/master@{#472749}

Former-commit-id: 5cfb0199ae5af577ca239feccd2d3c3f976ddac6